<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.example.todo.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/_9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/BackOptTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_back"
                style="@style/h2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:drawableTint="@color/white"
                android:layout_margin="@dimen/margin_medium"
                app:drawableStartCompat="@drawable/ic_arrow_back"
                app:drawableLeftCompat="@drawable/ic_arrow_back" />

            <ImageView
                android:id="@+id/menuIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_menu_24px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/BackOptTv"
                android:layout_margin="@dimen/margin_medium"
                app:tint="@color/white" />




        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/MyDayTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_my_day"
            style="@style/h1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cons2"
            android:layout_margin="@dimen/margin_medium" />

        <TextView
            android:id="@+id/DayTv"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:text="@{user.date}"
            tools:text="Monday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MyDayTv"
            android:layout_marginStart="@dimen/margin_medium" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/margin_medium"
            android:layout_margin="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TilTask"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_add_24px"
                    android:hint="@string/text_add_a_task"
                    app:hintAnimationEnabled="true"
                    android:clickable="true"
                    android:layout_marginBottom="@dimen/margin_small"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:focusable="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TaskEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_et" />

                </com.google.android.material.textfield.TextInputLayout>




            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!--        <include-->
        <!--            android:id="@+id/bottom_Sheet"-->
        <!--            layout="@layout/bottom_sheet_options" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>